Added agenda points to latest meeting

--- a/meeting_log/04-16-2020.md
+++ b/meeting_log/04-16-2020.md
@@ -25,3 +25,11 @@
 - Try read the grounded theory textbook by Kathy Charmaz
 - Do keep the questions open-ended
 - Don't do a formal reading of literature around security, but you definitely have to read up enough to understand what people are saying and your actual topic (eg. OWASP). Need to know enough to maintain a conversation.
+
+## Action items
+
+| Task                                             | Due      |
+| ------------------------------------------------ | -------- |
+| Start Prelim report                              | 20/04/20 |
+| Read up on security practices                    | 08/04/20 |
+| Get Craig a copy of the human ethics application | 17/04/20 |
