fixed dates on action items

--- a/meeting_log/04-16-2020.md
+++ b/meeting_log/04-16-2020.md
@@ -28,8 +28,8 @@
 
 ## Action items
 
-| Task                                             | Due      |
-| ------------------------------------------------ | -------- |
-| Start Prelim report                              | 20/04/20 |
-| Read up on security practices                    | 08/04/20 |
-| Get Craig a copy of the human ethics application | 17/04/20 |
+| Task                                             | Due        |
+| ------------------------------------------------ | ---------- |
+| Get Craig a copy of the human ethics application | 17/04/20   |
+| Start Prelim report                              | 20/04/20   |
+| Read up on security practices                    | Continuous |
