--- a/meeting_log/04-23-2020.md
+++ b/meeting_log/04-23-2020.md
@@ -1,4 +1,4 @@
-#Wednesday 15nd April at 3:45pm-4:10pm
+# Wednesday 15nd April at 3:45pm-4:10pm
 
 ## Attendees
 
@@ -37,5 +37,5 @@
 | --------------------------- | ---------- |
 | Download Nvivo              | 29/04/2020 |
 | Start Prelim report         | 29/04/2020 |
-| Read and summaries a report | 29/04/2020 |
+| Read and summarise a report | 29/04/2020 |
 | Email Aaron                 | 29/04/2020 |
