Meeting minutes added

--- a/meeting_log/04-30-2020.md
+++ b/meeting_log/04-30-2020.md
@@ -38,3 +38,4 @@ Background needed to be a bit stronger, but overall, for a proposal it was okay.
 | Continue with prelim report                          | 07/05/2020 |
 | Read and summarise a report                          | 07/05/2020 |
 | Start emailing people (assuming ethics goes through) | 07/05/2020 |
+| Make spreadsheet of contacts.                        | 30/04/2020 |
