Added an action item

--- a/meeting_log/05-07-2020.md
+++ b/meeting_log/05-07-2020.md
@@ -40,3 +40,4 @@ Have a look at the pandemic programming report
 | Continue with prelim report                                        | 14/05/2020 |
 | Read and summarise a report                                        | 14/05/2020 |
 | Set up ECS webpage, so people know you are legitimate              | 14/04/2020 |
+| Do a pilot test | 13/04/2020|
