--- a/meeting_log/05-14-2020.md
+++ b/meeting_log/05-14-2020.md
@@ -4,7 +4,8 @@
 
 - Lavanya
 - James Noble (Primary Supervisor)
-- Craig Anslow (Secondary Supervisor)
+
+**Apologies** - Craig Anslow (Secondary Supervisor)
 
 ## Agenda
 
@@ -18,7 +19,7 @@
 
 - Emailed Isobel about the HE application - no response, but the workflow listed is 'Research Office Post Review'.
 - Did a summary of Hala and Sonia's survey research.
-- Did a pilot study on Rachel Anderson from last year - still to transcribe it, but yes the questions are a bit all over the place.
+- Did a pilot study on ex 489 student, Rachel Anderson from last year - still to transcribe it, but yes the questions are a bit all over the place.
 - Set up an ecs webpage on https://homepages.ecs.vuw.ac.nz/~sajwanlava/
 - Will put up prelim draft on gitlab potentially late next week - after SWEN301.
 - Emailed Nathan about what questions he wished he asked - waiting on a response.
@@ -26,16 +27,23 @@
 **Questions from my end**
 
 - Can I approach people before human ethics has been granted?
+Wait for approval.
+
 - Looking at my questions, there is more of a underlining aspect of education which was mentioned last week. If I were to focus on that would that be an "worthwhile" direction to go down? I use that word very colloquially. How would I approach grounded theory based on that?
+It really does depend on who you focus the questions towards and interview. Can go either way. 
 
 **General discussion**
+
+- Shouldn't be too much of an issue to get industry
+- Ask about HE application again early next week
+- Do another pilot to narrow down study
+- Sending a draft of prelim next week is fine
 
 ## Action items
 
 | Task | Due |
 | ---- | --- |
-|      |     |
-|      |     |
-|      |     |
-|      |     |
-|      |     |
+|   Email about HE application again   | 18/05/2020    |
+|   Do another pilot study   | 21/05/2020    |
+|    Prelim draft   |  22/05/2020   |
+| Send updated 'potential' questions | 20/05/2020 |
