Need to finish background

--- a/reports/prelim/proj_report_outline.tex
+++ b/reports/prelim/proj_report_outline.tex
@@ -99,9 +99,24 @@ Technologies are continually adapting to match ever-changing trends, and as this
 \include{introduction}
 \include{background}
 \include{completed}
-\include{example}
-\include{conclusion}
-\include{appendix}
+\include{future}
+\include{feedback}
+
+% appendix
+
+\appendix
+\chapter{Application}
+\input{appendix/application}
+\chapter{Participant Information Sheet}
+\input{appendix/info}
+\chapter{Participant Consent Form}
+\input{appendix/consent}
+\chapter{Interview Guide}
+\input{appendix/guide}
+\chapter{Recruitment Post}
+\input{appendix/post}
+\chapter{Recruitment Webpage}
+\input{appendix/webpage}
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
