--- a/reports/prelim/3-completed.tex
+++ b/reports/prelim/3-completed.tex
@@ -9,8 +9,8 @@
 \par The human ethics application specified key methods for ethical data collection in order to maintain a research that followed ideal  human ethics policy
 (https://www.wgtn.ac.nz/documents/policy/research-policy/human-ethics-policy.pdf
 ). The application went into details of data collection and recruitment, conformation with the university Te Tiriti o Waitangi statute, project risks, and data management. Answering these sections meant that a lot of planning has gone into the interview process for data collection. In particular it was decided that the selection process will follow purposeful sampling for the interviews. This is because participants will need to be selected on whether they are professional programmers in industry. The study will ideally include participants with a range of job titles and years in the field in order to find interesting comparisons during the interview process in the way security practices are adopted in the developed software. Participants will consequently be filtered by appropriate job titles, and be older by the age of 18 to avoid complexities with the Vulnerable Children Act 2014
-(http://www.legislation.govt.nz/act/public/2014/0040/latest/DLM5501618.html?src=qs
-). 
+\textbf{(http://www.legislation.govt.nz/act/public/2014/0040/latest/DLM5501618.html?src=qs
+)}. 
 \newline
 \par Focus on the Te Tiriti o Waitangi was necessary as this is a research project run in New Zealand with participants who work in the domestic industry. Therefore, the recruitment of participants and the conducting of the interviews will be run in a way which respects the principles outline in the university statute, which derive directly from Te Tiriti o Waitangi. Specific care was taken to this as there is only a certain threshold that this study can pertain to. However, it was decided that through my recruitment, I should work under the principle of Whai wāhi (participation) and encourage the participation of tangata whenua by advertising it on accessible platforms and to organisations with more of an emphasis of Te Tiriti in their core values. An alum of Maori decent was also consulted on this and they mentioned that in the participant information and consent forms, it should be explicitly clear that participants still have ownership of their data and are able to edit and remove information as they wish. 
 \newline
@@ -20,13 +20,33 @@
 
 
 
-\section{Crafting the Semi-Structured Interview}
+\section{Interview Planning}
 
-\par In the ethics application planning had to occur well ahead of interviews and there was a focus on creating the questions. However, as grounded theory involves a semi-structured interview process, a guide was submitted alongside the application. This is because questions are meant to change dependent on the participant as well as the narrowing focus on the ultimate theory. The interviews will also include open-ended questions which allow for more personal, in-depth responses which can hold more information to be analysed. It is expected that the analysis will occur immediately after interviews in order to revise questions before the next participant.  All interviews are expected to take a minimum of 30 minutes, and will be transcribed. This transcription will be available for participants at their request for any amending of content
+\par In the ethics application planning had to occur well ahead of interviews and there was a focus on creating the questions. However, as grounded theory involves a semi-structured interview process, a guide was submitted alongside the application. This is because questions are meant to change dependent on the participant as well as the narrowing focus on the ultimate theory. The interviews will also include open-ended questions which allow for more personal, in-depth responses which can hold more information to be analysed. It is expected that the analysis will occur immediately after interviews in order to revise questions before the next participant.  All interviews are expected to take a minimum of 30 minutes, and will be transcribed. This transcription will be available for participants at their request for any amending of content.
 \newline
-\par Interviews will be expected to start by collecting information on participant background. This means groupings can happen by education, roles and experience. The next section of the interview will cover their current security practices that they implement in their code. This will then lead on to the impacts of security and languages in the projects they have worked on, and any background in the testing of those practices and successes of some over others. This sections allow for the simplest of aggregations to occur when all data has been collected and analysed. 
+\par Interviews will be expected to start by collecting information on participant background. This means groupings can happen by education, roles and experience. The next section of the interview will cover their current security practices that they implement in their code. This will then lead on to the impacts of security and languages in the projects they have worked on, and any background in the testing of those practices and successes of some over others. These sections allow for the simplest of aggregations to occur when all data has been collected and analysed. 
 \newline
-\par Potential interview questions have been planned alongside these sections. However, they are too broad and are disjointed of each other; often focusing on several different aspects of security practices. More thought is going into these questions as having a focus now, will provide the semi-structured interview the flow it needs to collect concise data. This is occurring through a small pilot study.
+\par For a better understanding of the process, old alums whom conducted grounded theory methodology studies were contacted on their approaches. One stated that they did not know what their focus would be going into the interviews, and the idea slowly formed the more interviews and analysis he did. The other stated that they was almost “over-prepared” in the sense that they had read many academic articles that none of the industry members knew specifics about. Both had the similarities that going into the interview stage, they had very broad questions that did not quite relate to each other. Those questions did not encourage the high-ended answers this study promotes. 
+\newline
+\par Potential interview questions have been planned alongside these sections. However, much like the issues with the alums, they are too broad and are disjointed of each other; often focusing on several different aspects of security practices. More thought is going into these questions to having a specific focus, which will provide the semi-structured interview the flow it needs to collect concise data.
+
+
+\section{Pilot Study}
+
+\par After obtaining relevant feedback on the questions, a suggestion was made to run a small pilot study.  The objective of a pilot study is to enhance the likelihood of success in the main study and to avoid any risks to completion
+\textbf{https://www.ncbi.nlm.nih.gov/pmc/articles/PMC2824145/}
+. The first pilot study conducted was to provide evidence on the level of efficiency of the outlined potential interview questions. The efficiency being that of the potential to obtain open answers with a ultimate focus in mind. This focus will allow for more detailed answers which can be analysed to draw closer comparisons to form a stronger theory. The participant of the pilot study was another alum of the university and a personal contact. This pilot solidified that the potential questions are definitely too broad in scope. It was also highlighted that a few questions were quite similar and can be condensed. The questions were also not as opened-ended as desired, which made the answers seem not very valuable. As this pilot study was about testing the questions the participant of the pilot study was asked every question. This meant that this interview did not follow a typical grounded theory approach in which questions are asked dependent on the participant. 
+\newline
+\par For the following pilot interview, this was not an issue as with more clarity on questions. Therefore the typical grounded theory approach to interviews was followed and questions were dependent on the interviewee. The person being another personal contact. More concise questions were asked, but from this second interview, it is apparent that the questions need to be written in a way that promotes discussion. As an interviewer, there also needs to be more practice in continuing the conversation and adapting questions to the last answer. 
+
+\section{Advertising}
+
+\par The study will need to be advertised through mailing lists and websites like Meetup and LinkedIn. A recruitment post has been made for this as well as the support of a simple web-page to present this study as professional and legitimate – traits especially important to programmers interested in security practices. The advertising has not been released yet as the human ethics application is still pending approval. However, as everything has been planned and ready, as soon as the approval has been made, recruitment can begin. 
+\newline
+\par Following the principle of Whai wāhi, the recruitment posts and web-page include the use of Te Reo. This is simple way of respecting tangata whenua, but is also more welcoming towards any potential Maori participants.
+
+
+
 
 
 
