Updated prelim, nearly finished first draft

--- a/reports/prelim/1-introduction.tex
+++ b/reports/prelim/1-introduction.tex
@@ -25,3 +25,6 @@ doi: 10.1109/SecDev.2016.013)}. Education is limited past initial acceptance wit
 \par After the human ethics application is approved, participants will be recruited by posting on tech- related groups (i.e. From Meetups and Linkedin) and mailing lists and also using mine and my supervisor contacts. At this point, I can then start semi-structured interviews with 10-20 interested individuals on their security practices while programming. These people will all be developers in New Zealand that are in varying stages of their careers and career paths to allow for a broader range of responses and a case study relevant to New Zealand. Examples of appropriate job titles include; DevOps engineer, front-end security developer, database administrator and security architect.
 \newline
 \par This project will lead to a new, more in-depth understanding of the psychology of the decisions made by programmers. The research done by this project could lead to future qualitative research to be done on another under-developed topic on why programmers do what they do. Paired with this research, that future one could help build a profile of a programmer and their thought processes. Data collected could also be the foundation that allows a developer to build a tool that helps other developers implement proper security practices; a Grammarly for security.
+
+\section{Deviations from the Original Plan}
+There have been no deviations from the original plan.
