--- a/reports/prelim/3-completed.tex
+++ b/reports/prelim/3-completed.tex
@@ -41,9 +41,9 @@
 
 \section{Advertising}
 
-\par The study will need to be advertised through mailing lists and websites like Meetup and LinkedIn. A recruitment post has been made for this as well as the support of a simple web-page to present this study as professional and legitimate – traits especially important to programmers interested in security practices. The advertising has not been released yet as the human ethics application is still pending approval. However, as everything has been planned and ready, as soon as the approval has been made, recruitment can begin. 
+\par The study will need to be advertised through mailing lists and websites like Meetup and LinkedIn. A recruitment post has been made for this as well as the support of a simple web-page \textbf{(INSERT LINK) }to present this study as professional and legitimate – traits especially important to programmers interested in security practices. The advertising has not been released yet as the human ethics application is still pending approval. However, as everything has been planned and ready, as soon as the approval has been made, recruitment can begin. 
 \newline
-\par Following the principle of Whai wāhi, the recruitment posts and web-page include the use of Te Reo. This is simple way of respecting tangata whenua, but is also more welcoming towards any potential Maori participants.
+\par Following the principle of Whai wāhi, the recruitment post and web-page include the use of Te Reo. This is simple way of respecting tangata whenua, but is also more welcoming towards any potential Maori participants.
 
 
 
