--- a/reports/prelim/appendix/application.tex
+++ b/reports/prelim/appendix/application.tex
@@ -1,5 +1,5 @@
-\includegraphics[height=0.8\textheight]{\string"humanethics".pdf}
-\includepdf[pagecommand={\thispagestyle{plain}}, pages={2-last},scale=0.8]{humanethics.pdf}
+\includegraphics[height=0.8\textheight]{appendix/humanethics.pdf}
+\includepdf[pagecommand={\thispagestyle{plain}}, pages={2-last},scale=0.8]{appendix/humanethics.pdf}
 
 
 
