--- a/reports/prelim/appendix/post.tex
+++ b/reports/prelim/appendix/post.tex
@@ -1,1 +1,1 @@
-\includegraphics[height=0.8\textheight]{\string"Recruitment_Post".pdf}
+\includegraphics[height=0.8\textheight]{appendix/Recruitment_Post.pdf}
