--- a/reports/prelim/appendix/guide.tex
+++ b/reports/prelim/appendix/guide.tex
@@ -1,3 +1,3 @@
-\includegraphics[height=0.8\textheight]{\string"Interview_Guide".pdf}
-\includepdf[pagecommand={\thispagestyle{plain}}, pages={2-last},scale=0.8]{Interview_Guide.pdf}
+\includegraphics[height=0.8\textheight]{appendix/Interview_Guide.pdf}
+\includepdf[pagecommand={\thispagestyle{plain}}, pages={2-last},scale=0.8]{appendix/Interview_Guide.pdf}
 
