Finished initial draft of preliminary report

--- a/reports/prelim/latex/4-future.tex
+++ b/reports/prelim/latex/4-future.tex
@@ -10,9 +10,9 @@
 \newline
 \par When the human ethics application is approved sampling can occur. As the recruitment methods have all been finalised, all that needs to be done is posting of the relevant information on mailing lists, Meetup and LinkedIn groups, and also using my own connections. They will be selectively chosen dependent on their role titles and other diversifying factors in order to find patterns across groups of people consequently avoiding any biases. It is important that recruitment occurs through different mediums, as it is not always that everyone will be interested in participating – especially with a topic related to security.  Sampling then leads onto data collection.
 \newline
-\par The form of data collection for this study is through interviews. They will be recorded to allow for focus to be on the participant and to mitigate a flow of conversation. This allows to concentration to be evenly distributed through the different steps of study. The interview will be semi-structured to allow for evolution in the questions (\textbf{GROUNDED THEORY FOR GEEKS)}. 
+\par The form of data collection for this study is through interviews. They will be recorded to allow for focus to be on the participant and to mitigate a flow of conversation. This allows to concentration to be evenly distributed through the different steps of study. The interview will be semi-structured to allow for evolution in the questions \cite{geeks}. 
 \newline
-\par Analysis will occur after each interview. This process will use open coding to analyse key points from the interview transcript\textbf{ (GROUNDED THEORY FOR GEEKS)}. Open coding is the process of keeping the mind free from any biases when sorting information. This means any assumptions should be ignored and ideas can only form from the data collected. This part of the remaining work is expected to take the longest. When concepts are identified these can influence the iterative nature of the interview and allow for the following interview to perhaps have different questions, target towards the found concepts. After the interviews and their following analysis, the core categories are found and then the theory can be presented in the final report and presentation. 
+\par Analysis will occur after each interview. This process will use open coding to analyse key points from the interview transcript \cite{geeks}. Open coding is the process of keeping the mind free from any biases when sorting information. This means any assumptions should be ignored and ideas can only form from the data collected. This part of the remaining work is expected to take the longest. When concepts are identified these can influence the iterative nature of the interview and allow for the following interview to perhaps have different questions, target towards the found concepts. After the interviews and their following analysis, the core categories are found and then the theory can be presented in the final report and presentation. 
 \newline
 \par 
 There are limitations to evaluating the solution as the project does not produce a technical artefact. Pertaining to the method; there are two significant areas of evaluation that can be taken. These are the evaluation of the research process and theory and will occur after the generation of the final theory. By evaluating these two areas, it can be examined whether correct procedures have taken place, and determine whether project goals have been met.
