--- a/reports/prelim/latex/proj_report_outline.tex
+++ b/reports/prelim/latex/proj_report_outline.tex
@@ -20,6 +20,8 @@
 
 \usepackage{appendix} % for using appendix
 
+\usepackage{url}
+
 
 
 %
@@ -109,9 +111,9 @@ Technologies are continually adapting to match ever-changing trends, and as this
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 
-%\bibliographystyle{ieeetr}
-\bibliographystyle{acm}
-\bibliography{sample}
+%\bibliographystyle{ieeetr}/acm
+\bibliography{6-references}
+\bibliographystyle{ieeetr}
 
 % appendix
 \appendix
